<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/order_item_layout"
    tools:context="com.alinturbut.restauranter.view.fragment.OrderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/generalBackground">


        <LinearLayout
            android:id="@+id/order_item_item_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="@color/menuItemColor"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:background="@color/primaryColorDark"
                android:orientation="vertical"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/primaryColorDark"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:text="@string/order_items"
                    android:textColor="@color/menuItemColor" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="right"
                    android:background="@color/primaryColorDark"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/order_items_number_items"
                    android:textColor="@color/menuItemColor" />

            </RelativeLayout>

            <TextView
                android:id="@+id/order_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="Pizza Margherita.....................................................................2\nPizza Margherita.....................................................................2\n"
                android:textColor="@color/cardView_text" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/order_item_total_price_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/order_item_item_layout"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:background="@color/menuItemColor"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/primaryColorDark"
                android:gravity="center"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="@string/order_items_total_price"
                android:textColor="@color/menuItemColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:layout_gravity="left"
                android:paddingLeft="5dp"
                android:text="Total price"
                android:textColor="@color/cardView_text" />

            <TextView
                android:id="@+id/order_items_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView"
                android:layout_gravity="end"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="100"
                android:textColor="@color/cardView_text" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/order_item_item_layout"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/choose_table_layout"
            android:background="@color/menuItemColor"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/primaryColorDark"
                android:gravity="center"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="@string/order_items_table"
                android:textColor="@color/menuItemColor" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="horizontal" android:layout_width="match_parent"
                          android:layout_height="match_parent">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:clickable="true"
                    android:src="@drawable/empty_table_1"
                    android:id="@+id/table_order_image" />

                <LinearLayout
                    android:id="@+id/table_card_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/generalBackground"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/primaryColorDark"
                        android:paddingBottom="2dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="2dp"
                        android:text="Table number"
                        android:gravity="center"
                        android:id="@+id/table_number_text"
                        android:textColor="@color/menuItemColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Order price:"
                        android:layout_marginLeft="5dp"
                        android:paddingBottom="2dp"
                        android:textColor="@color/cardView_text"
                        android:id="@+id/table_order_price" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="Occupied:"
                        android:textColor="@color/cardView_text"
                        android:id="@+id/table_order_occupied" />
                </LinearLayout>
            </LinearLayout>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="Choose table"
                android:background="@color/primaryColorDark"
                android:textColor="@color/menuItemColor"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:clickable="true"
                android:id="@+id/choose_table_button"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="Send order"
            android:id="@+id/send_order_button"
            android:background="@color/primaryColorDark"
            android:textColor="@color/menuItemColor"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"/>

    </RelativeLayout>
</FrameLayout>
